[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vips_malawi_dss_model"
version = "0.0.1"
description = "Example VIPS model, showcasing functionality"
readme = "README.md"
authors = [{name="Joel", email="jtanui@icipe.org" }]
license = { file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU Affero GPL V3",
    "Operating System :: OS Independent",
]
dependencies = [
    "shapely",
    "pydantic",
    "pytz",
    "pandas",
    "vipscore_common @ git+https://gitlab.nibio.no/VIPS/vipscore-python-common.git@0.2.4"
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]